objects/AlternateNetwork__c.object
<CustomObject>
    <fields>
        <fullName>AltNetStateOptions__c</fullName>
        <label>Advantage Network State Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1G0 – IN Anthem HealthSync</fullName>
                </value>
                <value>
                    <fullName>1G2 WI Blue Priority</fullName>
                </value>
                <value>
                    <fullName>1G7 - CT Century Preferred Tiered</fullName>
                </value>
                <value>
                    <fullName>1G8 - CO Pathway</fullName>
                </value>
                <value>
                    <fullName>1G9 - IL BlueChoice Options</fullName>
                </value>
                <value>
                    <fullName>1GD - AZ Blue Preferred PPO I</fullName>
                    <label>1GD – AZ Blue Alternative</label>
                </value>
                <value>
                    <fullName>1GE - DC/MD/Northern VA BlueChoice</fullName>
                    <label>1GE - DC/MD/Northern VA BlueChoice Adv Open Access</label>
                </value>
                <value>
                    <fullName>1GG - CA Select PPO</fullName>
                </value>
                <value>
                    <fullName>1GJ - NY Empire POS</fullName>
                </value>
                <value>
                    <fullName>1GM - MO POS Adv Net</fullName>
                </value>
                <value>
                    <fullName>1GN - MO PPO Adv Net</fullName>
                </value>
                <value>
                    <fullName>1GO - GA POS Adv Net</fullName>
                </value>
                <value>
                    <fullName>1GP - WI Blue Preferred POS</fullName>
                </value>
                <value>
                    <fullName>1GQ - FL PPO Adv Net</fullName>
                </value>
                <value>
                    <fullName>1GR - KC, MO PPO</fullName>
                </value>
                <value>
                    <fullName>1GS - NJ PPO Adv Net</fullName>
                </value>
                <value>
                    <fullName>1GT – TN Network S PPO</fullName>
                </value>
                <value>
                    <fullName>1GU - GA EPO Adv Net</fullName>
                </value>
                <value>
                    <fullName>1GY - NH BlueChoice Open Access POS</fullName>
                </value>
                <value>
                    <fullName>3GA - NC Blue Value (POS)</fullName>
                </value>
                <value>
                    <fullName>3GB – CO WellChoice – C</fullName>
                </value>
                <value>
                    <fullName>3GC – CO WellChoice – H</fullName>
                </value>
                <value>
                    <fullName>3GD – CO WellChoice – U</fullName>
                </value>
                <value>
                    <fullName>3GE – MO Anthem Alliance</fullName>
                </value>
                <value>
                    <fullName>3GH - TX Blue Premier Access</fullName>
                </value>
                <value>
                    <fullName>3GI - MN High Value</fullName>
                </value>
                <value>
                    <fullName>NY Empire Blue Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorrespondingPackageCodeContractCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corresponding Package Code/Contract Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondingPrefix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corresponding Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoggedInUserProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <label>Logged In User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipName>Alternate_Networks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <label>Advantage Network</label>
    <nameField>
        <displayFormat>AdvNet-{00000}</displayFormat>
        <label>Advantage Network Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advantage Networks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>